--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
 
 <div class="text">
 	<div class="wrapper">
-		<div id="L" class="letter">L</div>
+		<div id="L" class="letter">E</div>
+		<div class="shadow">E</div>
+	</div>
+	<div class="wrapper">
+		<div id="I" class="letter">L</div>
 		<div class="shadow">L</div>
 	</div>
 	<div class="wrapper">
-		<div id="I" class="letter">I</div>
+		<div id="G" class="letter">I</div>
 		<div class="shadow">I</div>
 	</div>
 	<div class="wrapper">
-		<div id="G" class="letter">G</div>
-		<div class="shadow">G</div>
+		<div id="H" class="letter">Z</div>
+		<div class="shadow">Z</div>
 	</div>
 	<div class="wrapper">
-		<div id="H" class="letter">H</div>
-		<div class="shadow">H</div>
+		<div id="T" class="letter">A</div>
+		<div class="shadow">A</div>
 	</div>
 	<div class="wrapper">
-		<div id="T" class="letter">T</div>
-		<div class="shadow">T</div>
-	</div>
-	<div class="wrapper">
-		<div id="N" class="letter">N</div>
-		<div class="shadow">N</div>
+		<div id="N" class="letter">V</div>
+		<div class="shadow">V</div>
 	</div>
 	<div class="wrapper">
 		<div id="E" class="letter">E</div>
 		<div class="shadow">E</div>
 	</div>
 	<div class="wrapper">
-		<div id="S" class="letter">S</div>
-		<div class="shadow">S</div>
+		<div id="S" class="letter">T</div>
+		<div class="shadow">T</div>
 	</div>
 	<div class="wrapper">
-		<div id="Stwo" class="letter">S</div>
-		<div class="shadow">S</div>
+		<div id="Stwo" class="letter">A</div>
+		<div class="shadow">A</div>
 	</div>
 </div>
     <script src="app.js"></script>
